--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -25,11 +25,9 @@ $(document).ready(function(){
    <% @songs.each_with_index do |song, i| %> 
     {
       title:"<div class='latest-release' style='width: 100%!important' ><div class='latest-release__art' style='position:relative'>   <img align='top' src='https://via.placeholder.com/72/000000/FFFFFF/?text=<%= avataryze(song.title) %>' alt='by Name'>  </div> <div class='latest-release__song' > <div class='latest-release__song__title'>     <button onClick='window.location='yahoo.com';' style='padding: 0px; margin: 0px'><%= (song.title.titleize).truncate (50) if song.title %> </button>      </div> <div class='latest-release__song__date'> <small class='month'>  <% if signed_in? and current_profile == song.profile  %>  <button onclick='location.href=\"<%= edit_song_path(song) %>\";' class= 'dropdown-item'><i class='fas fa-edit'></i>Edit</button>  <% end %> </small>            <span class='wht up-no-mobile' style='float: right;'> <button onclick='location.href=\"<%= new_song_path(song) %>\";' class= 'dropdown-item'><i class='fas fa-edit'></i>Upload</button>      </div></div></div>  &nbsp;",
-
-
             <% if song.mp3_audio.attached? %>
-            mp3:"<%= song_url(song.id) %>",
-            oga:"<%= song_url(song.id) %>"
+            mp3:"<%= song_live_song_url(song.id) %>",
+            oga:"<%= song_live_song_url(song.id) %>"
              <% end %>
     },
     <% end %>
