--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -12,8 +12,8 @@
 <br>
 <div>
  <audio controls>
-  <source src="<%= url_for(@song.mp3_audio) %>" type="audio/ogg">
-  <source src="<%= url_for(@song.mp3_audio) %>" type="audio/mpeg">
+  <source src="<%= song_live_song_url(@song.id) %>" type="audio/ogg">
+  <source src="<%= song_live_song_url(@song.id) %>" type="audio/mpeg">
   Your browser does not support the audio tag.
 </audio> 
 </div>
