update fixes add o user profile img

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -61,6 +61,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+                        <%= f.file_field :avatar, id:"file-input" %>
+
   </div>
 
   <div class="form-actions">
