--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/register">Register</a>
       </li>
-
+      <li class="nav-item">
+        <img class="nav-link"style=" width: 40px; height: 40px; border-radius: 50% !important; " src="<%= live_avatar_profiles_url(user_id: current_profile)%>">
+      </li>
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
